--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "portfolio",
-  "homepage": "https://fauziya2005.github.io/Portfolio/",
+  "homepage": "https://Fauziya2005.github.io/fauziya-portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview",
-  "deploy": "gh-pages -d dist"
-},
-
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "predepoly": "npm run build",
+    "deploy": "gh-pages -d dist"
+    
+  },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "react": "^19.1.1",
